@@ -47,6 +47,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #19544 and Issue #1180: Restore global option to ignore
+  ~/.pydistutils.cfg in Distutils, accidentally removed in backout of
+  distutils2 changes.
+
 - Issue #19523: Closed FileHandler leak which occurred when delay was set.
 
 - Issue #19544 and #6516: Restore support for --user and --group parameters to
